rewarp unexist url

--- a/public/index.html
+++ b/public/index.html
@@ -129,10 +129,10 @@
                         <h6 class="text-white">WE PROVIDE OUTSOURCED</h6>
                         <h1 class="text-white">IT Services & Solutions</h1>
                         <p>Technology-based services that help organizations plan, implement, manage, and optimize IT infrastructure and digital operations.</p>
-                        <a class="get_started button1 text-white text-decoration-none" href="contact.html">Get Started
+                        <a class="get_started button1 text-white text-decoration-none" href="footer">Get Started
                             <figure class="mb-0"><img src="assets/images/button-arrow.png" alt="" class="img-fluid"></figure>
                         </a>
-                        <a class="get_started button2 text-white text-decoration-none" href="contact.html">Contact Us
+                        <a class="get_started button2 text-white text-decoration-none" href="footer">Contact Us
                             <figure class="mb-0"><img src="assets/images/button-arrow.png" alt="" class="img-fluid"></figure>
                         </a>
                         <figure class="banner-circleleft mb-0">
@@ -187,7 +187,7 @@
                                 </figure> 
                                 <h4>Digital Marketing</h4>
                                 <p class="text-size-18">Digital channels, platforms, and technologies to promote products, services, or brands to reach and engage with target audiences online.</p>
-                                <a class="arrow text-decoration-none" href="service.html"><i class="circle fa-thin fa-arrow-right"></i></a>
+                                <a class="arrow text-decoration-none" href=""><i class="circle fa-thin fa-arrow-right"></i></a>
                             </div>   
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-12">
@@ -198,7 +198,7 @@
                                     </figure>
                                     <h4>Product Development</h4>
                                     <p class="text-size-18">Process of creating, designing, and bringing a new product to market—or improving an existing one—to meet customer needs and business goals.</p>
-                                    <a class="arrow text-decoration-none" href="service.html"><i class="circle fa-thin fa-arrow-right"></i></a>
+                                    <a class="arrow text-decoration-none" href="#service"><i class="circle fa-thin fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -211,7 +211,7 @@
                                 </figure>
                                 <h4>Ui/Ux Designing</h4>
                                 <p class="text-size-18">design focuses on how a product looks and feels — the visual side of digital interaction.</p>
-                                <a class="arrow text-decoration-none" href="service.html"><i class="circle fa-thin fa-arrow-right"></i></a>
+                                <a class="arrow text-decoration-none" href="#service"><i class="circle fa-thin fa-arrow-right"></i></a>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-12">
@@ -222,7 +222,7 @@
                                     </figure>
                                     <h4>Data Analysis</h4>
                                     <p class="text-size-18">Collecting, cleaning and transforming data to support decision-making and identify trends.</p>
-                                    <a class="arrow text-decoration-none" href="service.html"><i class="circle fa-thin fa-arrow-right"></i></a>
+                                    <a class="arrow text-decoration-none" href="#service"><i class="circle fa-thin fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -243,7 +243,7 @@
                         <li class="text"><i class="circle fa-duotone fa-check"></i>Custom Software & Application Development</li>
                         <li class="text text1"><i class="circle fa-duotone fa-check"></i>IT Consulting & Digital Transformation</li>
                     </ul>
-                    <a class="get_started text-white text-decoration-none" href="service.html">Get Started
+                    <a class="get_started text-white text-decoration-none" href="footer">Get Started
                         <figure class="mb-0"><img src="assets/images/button-arrow.png" alt="" class="img-fluid"></figure>
                     </a>
                 </div>
@@ -369,9 +369,9 @@
                     <h2 class="text-white">We help clients invent their future.</h2>
                     <!-- <p class="text1">We empower businesses to transform bold ideas into reality. Through innovation, technology, and strategic insight, we help our clients design, build, and scale the future they envision.</p> -->
                     <p class="text2">We Help Clients Invent Their Future through cutting-edge IT solutions, cloud technologies, and digital transformation strategies that accelerate innovation and unlock new opportunities for growth.</p>
-                    <a class="read_more text-white text-decoration-none" href="about.html">Read More
+                    <!-- <a class="read_more text-white text-decoration-none" href="about.html">Read More
                         <figure class="mb-0"><img src="assets/images/button-arrow.png" alt="" class="img-fluid"></figure>
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </div>
