--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,7 @@
                         <h6 class="text-white">WE PROVIDE OUTSOURCED</h6>
                         <h1 class="text-white">IT Services & Solutions</h1>
                         <p>Technology-based services that help organizations plan, implement, manage, and optimize IT infrastructure and digital operations.</p>
-                        <a class="get_started button1 text-white text-decoration-none" href="footer">Get Started
+                        <a class="get_started button1 text-white text-decoration-none" href="#footer">Get Started
                             <figure class="mb-0"><img src="assets/images/button-arrow.png" alt="" class="img-fluid"></figure>
                         </a>
                         <a class="get_started button2 text-white text-decoration-none" href="footer">Contact Us
@@ -243,7 +243,7 @@
                         <li class="text"><i class="circle fa-duotone fa-check"></i>Custom Software & Application Development</li>
                         <li class="text text1"><i class="circle fa-duotone fa-check"></i>IT Consulting & Digital Transformation</li>
                     </ul>
-                    <a class="get_started text-white text-decoration-none" href="footer">Get Started
+                    <a class="get_started text-white text-decoration-none" href="#footer">Get Started
                         <figure class="mb-0"><img src="assets/images/button-arrow.png" alt="" class="img-fluid"></figure>
                     </a>
                 </div>
