--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         <div class="main-header">
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg navbar-light">
-                    <a class="navbar-brand" href="index-2.html"><figure class="mb-0 banner-logo"><img src="assets/images/logo.png" alt="" class="img-fluid header-img"></figure></a>
+                    <a class="navbar-brand" href="#"><figure class="mb-0 banner-logo"><img src="assets/images/logo.png" alt="" class="img-fluid header-img"></figure></a>
                     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" 
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
-                                <a class="nav-link" href="index-2.html">Home</a>
+                                <a class="nav-link" href="#">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#service">Services</a>
@@ -1068,13 +1068,12 @@
             <div class="row">
                 <div class="col-lg-4 col-md-5 col-sm-6 col-12">
                     <div class="first-column">
-                        <a href="index-2.html">
+                        <a href="#">
                             <figure class="footer-logo">
                                 <img src="assets/images/logo.png" class="img-fluid" alt="">
                             </figure>
                         </a>
-                        <p class="text-size-18 footer-text">Grursus mal suada faci lisis lorem ipsum dolaror
-                            more ameion consectetur elit vesti at bulum ne odio aea the dumm ipsum dolocons.</p>
+                        <p class="text-size-18 footer-text">Our mission is to help businesses thrive in a rapidly evolving digital world by providing reliable, scalable, and customized solutions.</p>
                         <div class="lower">
                             <div class="lower-content">
                                 <figure class="icon">
@@ -1115,7 +1114,6 @@
                         <ul class="list-unstyled mb-0">
                             <li><a href="#service" class="text-size-18 text text-decoration-none">Cloud Service</a></li>
                             <li><a href="#service" class="text-size-18 text text-decoration-none">Testimonial</a></li>
-                            <li><a href="#service" class="text-size-18 text text-decoration-none">Team</a></li>
                             <li><a href="#service" class="text-size-18 text text-decoration-none">Digital marketing</a></li>
                             <li><a href="#service" class="text-size-18 text text-decoration-none">Pricing</a></li>
                         </ul>
