footer font text sizing

--- a/public/index.html
+++ b/public/index.html
@@ -364,7 +364,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-12 d-sm-block d-none">
                     <div class="icons">
-                        <h4 class="heading text-white">Where We Are:</h4>
+                        <h4 class="heading text-white">Address:</h4>
                         <p class="text-size-18 footer-text text-white">Ofident Building, Office 3 Costa Rican North American Cultural Center 200M North and 50M East, San Pedro, Barrio Dent San Jose, Costa Rica</p>
                     </div>
                 </div>
@@ -379,9 +379,9 @@
                 </div>
             </div>
         </div>
-        <figure class="footer-dotimage mb-0">
+        <!-- <figure class="footer-dotimage mb-0">
             <img src="assets/images/footer-dotimage.png" alt="" class="img-fluid">
-        </figure>
+        </figure> -->
         <figure class="footer-leftlayer mb-0">
             <img src="assets/images/footer-leftlayer.png" alt="" class="img-fluid">
         </figure>
