--- a/public/index.html
+++ b/public/index.html
@@ -333,7 +333,7 @@
                                 </figure>
                                 <div class="content">
                                     <span class="text-white">Email us:</span>
-                                    <a href="mailto:info@emailicon.com" class="text-size-18 mb-0 text-decoration-none">info@emailicon.com</a>
+                                    <a href="mailto:info@golden-charm.com" class="text-size-18 mb-0 text-decoration-none">info@golden-charm.com</a>
                                 </div>
                             </div>
                         </div>
