--- a/public/index.html
+++ b/public/index.html
@@ -345,7 +345,7 @@
                         <ul class="list-unstyled mb-0">
                             <li><a href="#" class="text-size-18 text text-decoration-none">Home</a></li>
                             <li><a href="#service" class="text-size-18 text text-decoration-none">Services</a></li>
-                            <li><a href="#offers" class="text-size-18 text text-decoration-none">Our Offers</a></li>
+                            <li><a href="#offer" class="text-size-18 text text-decoration-none">Our Offers</a></li>
                             <li><a href="#about" class="text-size-18 text text-decoration-none">About Us</a></li>
                             <li><a href="#projects" class="text-size-18 text text-decoration-none">Our Projects</a></li>
                         </ul>
